[package]
name = "dad-joke-hotline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "~4.4.18", features = ["derive", "env"] }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
rand = "0.9.1"
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
