[package]
name = "dad-joke-hotline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "~4.4.18", features = ["derive", "env"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
